[project]
name = "cert-explorer"
version = "0.1.0"
description = "Convert raw hexadecimal certificate data into human-readable format."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.1.0",
    "cryptography>=46.0.4",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "C"] 
